kubernetes/apps/kopiur-system/kopiur/repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-direct
  namespace: storage
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.99.19
  ports:
    - port: 3900
      targetPort: 3900
  selector:
    app: garage
